--- a/src/content/posts/my-git-workflow-for-refactoring/index.mdx
+++ b/src/content/posts/my-git-workflow-for-refactoring/index.mdx
@@ -3,7 +3,7 @@ date: '2024-09-29T16:34:56.407Z'
 slug: 'my-git-workflow-for-refactoring'
 title: 'My <code>git</code> Workflow for Refactoring'
 subtitle: null
-description: 'Refactoring is a key part of my development process. Let me show you the <code>git</code> workflow I use to make refactoring a simple part of my feature building process.'
+description: 'Refactoring is a key part of my development process. Let me show you the <code>git</code> workflow I use to make refactoring just another step in building features or other code changes.'
 excerpt: null
 tags: ['Git', 'Software Engineering', 'Productivity']
 relatedPostsSlugs: []
