--- a/src/content/posts/my-git-workflow-for-refactoring/index.mdx
+++ b/src/content/posts/my-git-workflow-for-refactoring/index.mdx
@@ -14,7 +14,7 @@ import { ExampleButton, ExampleButtonWithVariant } from './_components'
 
 If you've followed me for any significant amount of time, then you might know that [Refactoring by Martin Fowler](https://martinfowler.com/books/refactoring.html) is the most influential book on writing software I have ever read. It fundamentally changed my approach towards writing code.
 
-One particular way the book influenced me led to a change in my `git` workflow. Adopting this strategy made it easier for me to refactor code, build upon that change, and get it reviewed quicker than ever. If you work in an organization that uses pull requests and code reviews, I believe this workflow will help you do the same.
+The book influenced me so greatly that it led to a change in my `git` workflow. Adopting the strategy I'm about to show you made it easier for me to refactor code, build upon that change, and get it reviewed quicker than ever. If you work in an organization that uses pull requests and code reviews, I believe this workflow will help you do the same.
 
 The gist of my workflow is this:
 
