--- a/src/content/posts/wrangling-tuple-types/index.mdx
+++ b/src/content/posts/wrangling-tuple-types/index.mdx
@@ -94,7 +94,7 @@ You and I know that `useBool` returns a tuple, how do we convince TypeScript of 
 
 ### The way I used to do it
 
-I advise others to avoid defining function return types whenever possible to allow TypeScript inference to do its thing. There's really know need to be overly prescriptive. Type the inputs, let TS handle the outputs.
+I advise others to avoid defining function return types whenever possible to allow TypeScript inference to do its thing. There's really no need to be overly prescriptive. Type the inputs, let TS handle the outputs.
 
 Except in the case of tuples.
 
