--- a/src/content/posts/what-adhd-feels-like/index.mdx
+++ b/src/content/posts/what-adhd-feels-like/index.mdx
@@ -90,6 +90,6 @@ I might suggest you refresh the page now. That bar _will_ grow forever.
 
 ### Closing thoughts
 
-As with any metaphor, this one is imperfect, but I hope it provides some context for the people in your life struggling with ADHD. Imagine having to "test your focus" each and every day. It might help you understand why people with ADHD are far more likely to be clinically depressed. We don't just have less dopamine, but we unless we're fortunate enough to find work that aligns with our stimulation modifiers, we spend most of our lives fighting with ourselves to get stimulated enough to do what we need to do.
+As with any metaphor, this one is imperfect, but I hope it provides some context for the people in your life struggling with ADHD. Imagine having to "test your focus" each and every day. It might help you understand why people with ADHD are far more likely to be clinically depressed. We don't just have less dopamine, but unless we're fortunate enough to find work that aligns with our stimulation modifiers, we spend most of our lives fighting with ourselves to get stimulated enough to do what we need to do.
 
 I may update this post in the future, or write something about how I built this little game with React, or how to work with your neurodivergent teammates better, but this is all the focus I have for now. Hope you understand.
