--- a/src/content/posts/what-adhd-feels-like/index.mdx
+++ b/src/content/posts/what-adhd-feels-like/index.mdx
@@ -71,9 +71,11 @@ There are times where no amount of modifiers will do anything. Nothing will allo
   subtitle="ADHD Brain in Executive Dysfunction"
 />
 
+If you encounter someone in executive dysfunction, you need to understand they aren't just being lazy. The brain is in a physical state that is not allowing for executive function. It is very likely this person is in a shame-cycle, and only the urgency of the situation might get so dire they finally can do the task.
+
 ### Hyperfocus
 
-Many of you have probably heard of "hyperfocus", and perahaps heard it called a super power. In the right scenario, it can certainly lead to prodigous amounts of productivity, but it often comes with some severe negative side effects as well.
+Many of you have probably heard of "hyperfocus", and perhaps heard it called a super power. In the right scenario, it can certainly lead to prodigous amounts of productivity, but it often comes with some severe negative side effects as well.
 
 It might not be obvious, especially to those obsessed with productivity, but a certain amount of attention decay is a good thing. You need to remember to do things like eat, go to the bathroom, manage your life, etc. A person in hyperfocus forgets to do all of those things. Full disclosure, when I'm in that state, it feels downright violent to be asked to context switch.
 
