--- a/src/content/posts/what-adhd-feels-like/index.mdx
+++ b/src/content/posts/what-adhd-feels-like/index.mdx
@@ -79,7 +79,7 @@ Many of you have probably heard of "hyperfocus", and perhaps heard it called a s
 
 It might not be obvious, especially to those obsessed with productivity, but a certain amount of attention decay is a good thing. You need to remember to do things like eat, go to the bathroom, manage your life, etc. A person in hyperfocus forgets to do all of those things. Full disclosure, when I'm in that state, it feels downright violent to be asked to context switch.
 
-Hyperfixating occurs when our system gets stuck. Yes, it's pegged above the threshold, but there is no reset button. The only way for it to decay is for the system to run out of resources and crash.
+Hyperfocus occurs when our system gets stuck. Yes, it's pegged above the threshold, but there is no reset button. The only way for it to decay is for the system to run out of resources and crash.
 
 <TestYourMight
   client:load
