add post on how i built test your focus

--- a/src/content/posts/cyclomatic-complexity/index.mdx
+++ b/src/content/posts/cyclomatic-complexity/index.mdx
@@ -7,6 +7,7 @@ description: 'Understanding cyclomatic complexity and how to manage it can level
 tags: ['Data Structures and Algorithms', 'Computer Science']
 relatedPostsSlugs:
   [
+    'prefer-explicit-maps',
     'when-elses-make-your-code-worse',
     'patterns-for-functions-with-conditionals',
     'prefer-multiple-compositions',
