--- a/src/content/posts/enumerate-dont-booleanate/index.mdx
+++ b/src/content/posts/enumerate-dont-booleanate/index.mdx
@@ -7,6 +7,7 @@ description: 'We learn how to use booleans early and often, but they are not the
 relevantCourseNickname: 'xstate'
 relatedPostsSlugs:
   [
+    'prefer-explicit-maps',
     'how-to-use-usereducer-as-a-finite-state-machine',
     'adding-infinite-states-to-a-use-reducer-finite-state-machine',
     'can-a-state-machine-be-a-string',
