--- a/src/content/posts/facade-pattern/index.mdx
+++ b/src/content/posts/facade-pattern/index.mdx
@@ -6,7 +6,7 @@ subtitle: 'or why this pattern might save your bacon'
 description: 'Learn how the "facade pattern" can be used in JavaScript to make it easier to swap libraries, increase code flexibility, and hide complexity in your applications.'
 excerpt: 'With the facade pattern, we&apos;re able to hide details "under the hood", changing them when necessary without affecting the API exposed by the facade and consumed by the rest of your application.'
 tags: ['JavaScript', 'React', 'Computer Science', 'Software Engineering']
-relatedPostsSlugs: []
+relatedPostsSlugs: ['responsive-design-and-composition']
 ---
 
 We live in exciting times (for JavaScript developers). There's almost a library for everything you can imagine on [npm](https://npmjs.com) and you can add packages to your projects so quickly. It's really quite a bit of fun when you take a second to think about it.
