--- a/src/content/posts/prefer-composition/index.mdx
+++ b/src/content/posts/prefer-composition/index.mdx
@@ -8,6 +8,7 @@ excerpt: null
 tags: ['React', 'JavaScript', 'TypeScript', 'Refactoring']
 relatedPostsSlugs:
   [
+    'responsive-design-and-composition',
     'managing-cyclomatic-complexity',
     'just-enough-fp-composition',
     'patterns-for-functions-with-conditionals',
