--- a/src/content/posts/simulation-pattern/index.mdx
+++ b/src/content/posts/simulation-pattern/index.mdx
@@ -7,7 +7,12 @@ description: "The &ldquo;simulation pattern&rdquo; is a useful tool for anyone's
 excerpt: "The &ldquo;simulation pattern&rdquo; is a useful tool for anyone's programming repertoire. Let's learn how to use it on almost any state problem that advances by discrete increments."
 tags: ['JavaScript', 'Computer Science']
 relatedPostsSlugs:
-  ['what-is-a-closure', 'generator-functions', 'conways-game-of-life']
+  [
+    'what-is-a-closure',
+    'generator-functions',
+    'conways-game-of-life',
+    'how-i-built-test-your-focus',
+  ]
 ---
 
 **Disclaimer**: If this pattern has an established name, let me know. I'll update the article to reflect that.
