--- a/src/content/posts/what-adhd-feels-like/index.mdx
+++ b/src/content/posts/what-adhd-feels-like/index.mdx
@@ -6,7 +6,7 @@ subtitle: null
 description: 'While we have made great progress in understanding ADHD, it can still be difficult for some to grasp the impact it has on those who struggle with it. Let me show you what having ADHD sometimes feels like to me with a simple interactive game.'
 excerpt: null
 tags: ['Thoughts', 'Productivity']
-relatedPostsSlugs: []
+relatedPostsSlugs: ['how-i-built-test-your-focus']
 ---
 
 import { TestYourMight } from './_components'
