--- a/src/content/posts/how-i-built-test-your-focus/index.mdx
+++ b/src/content/posts/how-i-built-test-your-focus/index.mdx
@@ -1,7 +1,7 @@
 ---
 date: '2024-11-15T03:13:17.471Z'
 slug: 'how-i-built-test-your-focus'
-title: 'How I Built "Test Your Focus"'
+title: 'How I Built &ldquo;Test Your Focus&rdquo;'
 subtitle: null
 description: 'In my previous post, I used a "Test Your Focus" mini-game as a metaphor for describing my ADHD. Let&apos;s learn how to build it using React.'
 excerpt: null
@@ -357,7 +357,7 @@ Here's a non-exhaustive list of ideas you could implement next:
 
 - Add a `threshold` and determine if the game has been `won`
 - Add a `timer` and `countdown`
-- Add multiplayer with something like [PartyKit]()
+- Add multiplayer with something like [PartyKit](https://www.partykit.io/)
 - Add "modifiers" like I did in my ADHD post
 
 I'm sure you can think of even more.
