--- a/src/content/posts/why-use-use-reducer/index.mdx
+++ b/src/content/posts/why-use-use-reducer/index.mdx
@@ -13,11 +13,12 @@ relatedPostsSlugs:
     'enumerate-dont-booleanate',
     'prefer-declarative-state-updaters',
     'comparing-use-ref-and-use-state',
+    'how-i-built-test-your-focus',
   ]
 ---
 
-import MikesTweet from './_MikesTweet'
 import JumpingBall from './_JumpingBall'
+import MikesTweet from './_MikesTweet'
 import ReducerJumpingBall from './_ReducerJumpingBall'
 
 A while back now, my buddy [Mike Hartington](https://twitter.com/mhartington)
