--- a/src/content/posts/consciousness-lottery/index.mdx
+++ b/src/content/posts/consciousness-lottery/index.mdx
@@ -3,7 +3,7 @@ date: '2024-11-19T16:24:07.587Z'
 slug: 'consciousness-lottery'
 title: 'The Consciousness Lottery'
 subtitle: null
-description: ''
+description: "For years now, I've been using the phrase &ldquo;the consciousness lotter&rdquo; in conversation and I wanted to put it into writing finally. Come learn what it is and why you should add it to your vernacular."
 excerpt: null
 tags: ['Thoughts', 'Philosophy']
 relatedPostsSlugs: []
@@ -45,4 +45,4 @@ My hope is you have, and if you haven't, that you will. But when you do so, I wa
 
 This doesn't mean you haven't worked hard, or haven't made the most of the "hand you were dealt". This takes nothing away from conscious choices you have made. <Marker content="The discussion on free will versus determinism will have to be another day." /> But it does ask you to consider what was out of your power to control entirely and to think of others in the same way.
 
-So please, add this concept to your vocabulary. See how it changes how you view yourself and others.
+So please, add this concept to your vernacular. See how it changes how you view yourself and others.
