--- a/src/content/posts/consciousness-lottery/index.mdx
+++ b/src/content/posts/consciousness-lottery/index.mdx
@@ -3,7 +3,7 @@ date: '2024-11-19T16:24:07.587Z'
 slug: 'consciousness-lottery'
 title: 'The Consciousness Lottery'
 subtitle: null
-description: "For years now, I've been using the phrase &ldquo;the consciousness lotter&rdquo; in conversation and I wanted to put it into writing finally. Come learn what it is and why you should add it to your vernacular."
+description: "For years now, I've been using the phrase &ldquo;the consciousness lottery&rdquo; in conversation and I wanted to put it into writing finally. Come learn what it is and why you should add it to your vernacular."
 excerpt: null
 tags: ['Thoughts', 'Philosophy']
 relatedPostsSlugs: []
