--- a/src/content/posts/what-adhd-feels-like/index.mdx
+++ b/src/content/posts/what-adhd-feels-like/index.mdx
@@ -44,6 +44,22 @@ Let's consider the same situation with the ADHD brain.
 
 Notice the brain struggles to get to the threshold and falls quickly below it. We need to keep clicking the button in order to keep stimulating the brain above the focus threshold.
 
+### Understimulated
+
+Sometimes the ADHD brain gets in a mode where it's desperately seeking stimulation, but there's no guarantee that what is tried will produce the dopamine desired.
+
+The person might have a number of go to activities or stimulants, but their effectiveness varies often. Something that brought them a lot of joy and focus yesterday might no longer work, and there's no way to know for how long the activity will do the trick.
+
+The game below simulated this understimulation. Which button will work? And for how long before it no longer works? Try it out.
+
+<TestYourMight
+  client:load
+  decay={2.5}
+  impulse={5}
+  subtitle="ADHD Brain Understimulated"
+  understimulated={true}
+/>
+
 ### Stimulation Modifiers
 
 There are four ways we can "encourage" an ADHD brain to get focused, some positive, some negative: **novelty, intrinsic interest, challenge, and urgency**. <Marker content="I remember this with the mnemonic NICU." /> In the context of our game, we can think of these as "stimulation modifiers". We can tweak and adjust them and watch how it changes our ability to stimulate the brain across the threshold.
