edit some wording

--- a/src/content/posts/what-adhd-feels-like/index.mdx
+++ b/src/content/posts/what-adhd-feels-like/index.mdx
@@ -46,11 +46,11 @@ Notice the brain struggles to get to the threshold and falls quickly below it. W
 
 ### Understimulated
 
-Sometimes the ADHD brain gets in a mode where it's desperately seeking stimulation, but there's no guarantee that what is tried will produce the dopamine desired.
+Sometimes the ADHD brain gets in a mode where it's desperately seeking stimulation, but there's no guarantee that whatever is tried will produce the dopamine desired.
 
-The person might have a number of go to activities or stimulants, but their effectiveness varies often. Something that brought them a lot of joy and focus yesterday might no longer work, and there's no way to know for how long the activity will do the trick.
+The person might have a number of go-to activities that they find stimulating, but their effectiveness varies often. Something that brought them a lot of joy and focus yesterday might not work today, and there's no way to know for how long the activity will do the trick.
 
-The game below simulated this understimulation. Which button will work? And for how long before it no longer works? Try it out.
+The game below represents this understimulation. Imagine each button as an activity a person might do to find stimulation. Eat some food, scroll their phone, play a video game, do a workout, etc. Which button will work, and for how long before it stops working? Try it out.
 
 <TestYourMight
   client:load
