add sliding window visual

--- a/src/content/posts/algorithm-sliding-window/index.mdx
+++ b/src/content/posts/algorithm-sliding-window/index.mdx
@@ -9,9 +9,15 @@ tags: ['Data Structures and Algorithms', 'JavaScript', 'TypeScript']
 relatedPostsSlugs: []
 ---
 
+import { SlidingWindowVisual } from './_components'
+
 I've decided to go back on the job hunt and this has me getting prepared for technical interviews. To do this, I've been practicing [Leetcode](https://leetcode.com) problems. Yes, I'm not a big fan of this style of interviewing either, but you have to be prepared for whatever might come.
 
 I recently ran into a problem that used a technique I've never used before, a "sliding window", and I wanted to write a quick post about it, both to solidify it in my memory and hopefully teach you something new.
+
+<OffsetWrap>
+  <SlidingWindowVisual client:load />
+</OffsetWrap>
 
 ### The Problem
 
